refactored RiakTest class, added PyPy support to improve on the fly random data creation added gevent support to improve threaded network performance added a fabfile to execute tests on the remote machine.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-fake-factory=0.5.0
+fake-factory
 -e git://github.com/basho/riak-python-client.git#egg=riak
+fabric
+gevent
+# use following gevent for PyPy
+#-e git://github.com/surfly/gevent.git#egg=gevent
