added Id field type (with a default unique key generator) added auto idx field to ListNodes improved many2many support added lazy_object_proxy for handling of linked models (instead of __getattr__ ) added lazy_object_proxy to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-fake-factory
 -e git://github.com/basho/riak-python-client.git#egg=riak
-fabric
-#gevent
-# use following gevent for PyPy
-#-e git://github.com/surfly/gevent.git#egg=gevent
+lazy_object_proxy
 enum34
-pytest
 six
+
+#these are needed for tests
+
+fake-factory
+pytest
+fabric
